--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head th:include="./fragments/base :: header">
+
+<head th:include="./fragments/base :: header">
     <title>Error Page</title>
-    </head>
-    <body>
-        <div th:replace="./fragments/base :: navbar"></div>
-        <div>
-            <h2>An Error acuured in the server</h2>
+    <style>
+        body {
+            background: #dedede;
+        }
+
+        .page-wrap {
+            min-height: 100vh;
+        }
+    </style>
+</head>
+
+<body>
+    <div th:replace="./fragments/base :: navbar"></div>
+    <div>
+        <div class="page-wrap d-flex flex-row align-items-center">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-12 text-center">
+                        <span class="display-1 d-block">404</span>
+                        <div class="mb-4 lead">The page you are looking for was not found.</div>
+                        <a th:href="@{~/}" class="btn btn-link">Back to Home</a>
+                    </div>
+                </div>
+            </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
