--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <!-- <div th:replace="./fragments/base :: navbar"></div> -->
+    <div th:replace="./fragments/base :: navbar"></div>
     <div>
         <div class="page-wrap d-flex flex-row align-items-center">
             <div class="container">
