--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,124 +3,14 @@
     <head th:include="./fragments/base :: header"></head>
     <head>
         <title>RA - Login</title>
+        <link rel="stylesheet" th:href="@{../css/login.css}" type="text/css">
     </head>
     <body>
     <div>
         <div th:replace="./fragments/base :: navbar"></div>
         
     <style>
-        body {
-            color: #fff;
-            background: #19aa8d;
-            font-family: 'Roboto', sans-serif;
-        }
 
-        .form-control {
-            font-size: 15px;
-        }
-
-        .form-control,
-        .form-control:focus,
-        .input-group-text {
-            border-color: #e1e1e1;
-        }
-
-        .form-control,
-        .btn {
-            border-radius: 3px;
-        }
-
-        .signup-form {
-            width: 400px;
-            margin: 0 auto;
-            padding: 30px 0;
-        }
-
-        .signup-form form {
-            color: #999;
-            border-radius: 3px;
-            margin-bottom: 15px;
-            background: #fff;
-            box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-            padding: 30px;
-        }
-
-        .signup-form h2 {
-            color: #333;
-            font-weight: bold;
-            margin-top: 0;
-        }
-
-        .signup-form hr {
-            margin: 0 -30px 20px;
-        }
-
-        .signup-form .form-group {
-            margin-bottom: 20px;
-        }
-
-        .signup-form label {
-            font-weight: normal;
-            font-size: 15px;
-        }
-
-        .signup-form .form-control {
-            min-height: 38px;
-            box-shadow: none !important;
-        }
-
-        .signup-form .input-group-addon {
-            max-width: 42px;
-            text-align: center;
-        }
-
-        .signup-form .btn,
-        .signup-form .btn:active {
-            font-size: 16px;
-            font-weight: bold;
-            background: #19aa8d !important;
-            border: none;
-            min-width: 140px;
-        }
-
-        .signup-form .btn:hover,
-        .signup-form .btn:focus {
-            background: #179b81 !important;
-        }
-
-        .signup-form a {
-            color: #fff;
-            text-decoration: underline;
-        }
-
-        .signup-form a:hover {
-            text-decoration: none;
-        }
-
-        .signup-form form a {
-            color: #19aa8d;
-            text-decoration: none;
-        }
-
-        .signup-form form a:hover {
-            text-decoration: underline;
-        }
-
-        .signup-form .fa {
-            font-size: 21px;
-        }
-
-        .signup-form .fa-paper-plane {
-            font-size: 18px;
-        }
-
-        .signup-form .fa-check {
-            color: #fff;
-            left: 17px;
-            top: 18px;
-            font-size: 7px;
-            position: absolute;
-        }
     </style>
     
     <div th:if="${param.logout}">
@@ -133,7 +23,7 @@
             <div class="form-group">
                 
                 <div th:if="${param.error}">
-                    Invalid username or password.
+                    Invalid email or password.
                 </div>
                 <div class="input-group">
                     <div class="input-group-prepend">
@@ -141,7 +31,7 @@
                             <span class="fa fa-user"></span>
                         </span>
                     </div>
-                    <input type="text" class="form-control" name="username" placeholder="Username" required>
+                    <input type="text" class="form-control" name="email" placeholder="Email" required>
                 </div>
             </div>
             <div class="form-group">
