--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -6,5 +6,14 @@
     </head>
     <body>
         <div th:replace="./fragments/base :: navbar"></div>
-        <p>Profile</p>
+        <div>
+            <p>First Name: <input disabled="true"  th:value="${firstName}" ></p>
+            <p>Last Name: <input disabled="true" th:value="${lastName}"></p>
+            <p>Email Address: <input disabled="true" th:value="${emailAddress}"> </p>
+            <button>edit</button>
+        </div>
+
+        <div>
+            <div><h3>My CV's</h3></div>
+        </div>
     </body>
