--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -36,17 +36,17 @@
         <li class="nav-item dropdown active">
           <a class="nav-link dropdown-toggle" th:href="@{~/build}" id="navbarDropdown" role="button"
             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Create
+            Build Resume
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" th:href="@{~/build/templates}">Templates</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" th:href="@{~/build/}">Build Resume</a>
+            <a class="dropdown-item" th:href="@{~/build/templates}">Resume Templates</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" th:href="@{~/}">About</a>
           </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+        <li class="nav-item active">
+          <a class="nav-link" th:href="@{~/}">About</a>
         </li>
       </ul>
       <ul class="navbar-nav my-2 my-lg-0">
